--- a/.github/workflows/sync-to-public-repo.yml
+++ b/.github/workflows/sync-to-public-repo.yml
@@ -20,9 +20,11 @@ jobs:
         run: |
           git config --local user.name ${{ secrets.GIT_USER_NAME }}
           git config --local user.email ${{ secrets.GIT_USER_EMAIL }}
+          git commit -a -m "Add changes"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GH_PAT }}
+          branch: ${{ github.ref }}
           repository: ${{ secrets.PUBLIC_REPO_URL }}
           force: true
