--- a/.github/workflows/build-push-and-deploy.yml
+++ b/.github/workflows/build-push-and-deploy.yml
@@ -16,8 +16,8 @@ jobs:
           - name: Login to DockerHub
             uses: docker/login-action@v3
             with:
-              username: ${{ secrets.DOCKERHUB-USERNAME }}
-              password: ${{ secrets.DOCKERHUB-TOKEN }}
+              username: ${{ secrets.DOCKERHUB_USERNAME }}
+              password: ${{ secrets.DOCKERHUB_TOKEN }}
 
           - name: Docker Metadata
             id: meta
