Fix workflow variable

--- a/.github/workflows/build-push-and-deploy.yml
+++ b/.github/workflows/build-push-and-deploy.yml
@@ -42,5 +42,5 @@ jobs:
               port: ${{ secrets.PORT }}
               passphrase: ${{ secrets.PASSPHRASE }}
               script: |
-                cd $LOCATION
+                cd ${{ env.LOCATION }}
                 docker compose pull && docker compose up -d
